--- a/MyMovies.Web/Views/Home/Index.cshtml
+++ b/MyMovies.Web/Views/Home/Index.cshtml
@@ -1,45 +1,176 @@
-﻿<div id="body">
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>Welcome to ASP.NET Web API!</h1>
-                <h2>Modify the code in this template to jump-start your ASP.NET Web API development.</h2>
-            </hgroup>
-            <p>
-                ASP.NET Web API allows you to expose your applications, data and services to the
-                web directly over HTTP.
-            </p>
-            <p>
-                To learn more about ASP.NET Web API visit the
-                <a href="http://go.microsoft.com/fwlink/?LinkID=238195" title="ASP.NET Web API Website">ASP.NET Web API Website</a>.
-                The page features <mark>videos, tutorials, and samples</mark> to help you get the most from ASP.NET Web API.
-                If you have any questions about ASP.NET Web API, visit
-                <a href="http://go.microsoft.com/fwlink/?LinkID=238196" title="ASP.NET Web API Forum">our forums</a>.
-            </p>
-        </div>
-    </section>
-    <section class="content-wrapper main-content clear-fix">
-        <h3>We suggest the following steps:</h3>
-        <ol class="round">
-            <li class="one">
-                <h5>Getting Started</h5>
-                ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-                a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-                is an ideal platform for building RESTful applications on the .NET Framework.
-                <a href="http://go.microsoft.com/fwlink/?LinkId=245160">Learn more…</a>
-            </li>
+﻿<div id="content" role="main">
+    <div class="page-header dark larger larger-desc">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>Portfolio Post</h1>
+                    <p class="page-header-desc">Check out our portfolio before working with us.</p>
+                </div><!-- End .col-md-6 -->
+                <div class="col-md-6">
+                    <ol class="breadcrumb">
+                        <li><a href="index.html">Home</a></li>
+                        <li class="active">Portfolio Post</li>
+                    </ol>
+                </div><!-- End .col-md-6 -->
+            </div><!-- End .row -->
+        </div><!-- End .container -->
+    </div><!-- End .page-header -->
 
-            <li class="two">
-                <h5>Add NuGet packages and jump-start your coding</h5>
-                NuGet makes it easy to install and update free libraries and tools.
-                <a href="http://go.microsoft.com/fwlink/?LinkId=245161">Learn more…</a>
-            </li>
-            <li class="three">
-                <h5>Find Web Hosting</h5>
-                You can easily find a web hosting company that offers the right mix of features
-                and price for your applications.
-                <a href="http://go.microsoft.com/fwlink/?LinkId=245164">Learn more…</a>
-            </li>
-        </ol>
-    </section>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-7">
+                <div class="portfolio-media">
+                    <img src="images/portfolio/project.jpg" class="img-responsive" alt="Sinle Project">
+                </div><!-- End .portfolio-media -->
+            </div><!-- End .col-md-7 -->
+
+            <div class="col-md-5">
+
+                <div class="portfolio-details">
+                    <h2 class="title-underblock custom">One big Buggy family</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam in est justo. Sed sollicitudin augue ut massa fermentum, sit amet condimentum nulla volutpat. Vestibulum non dui condimentum, pulvinar lectus quis, molestie erat. Cras dapibus eros urna.</p>
+                    <p>Etiam et risus vehicula, pulvinar velit quis, sagittis nisi. Aliquam eu augue id mauris porttitor tempor et eget quam. Mauris elementum enim.</p>
+                    <ul class="portfolio-details-list">
+                        <li><span>Author:</span> Eon Dean</li>
+                        <li><span>Published at:</span> 20 February 2014</li>
+                        <li><span>Category:</span> <a href="#">Design</a>, <a href="#">Illustration</a></li>
+                        <li><span>Designed for:</span> EonyThemes Corporation</li>
+                        <li><span>Favourite Count: </span> 34</li>
+                        <li class="share-li">
+                            <span>Share Now:</span>
+                            <div class="social-icons">
+                                <a href="#" class="social-icon icon-facebook add-tooltip" data-placement="top" title="" data-original-title="Facebook">
+                                    <i class="fa fa-facebook"></i>
+                                </a>
+                                <a href="#" class="social-icon icon-twitter add-tooltip" data-placement="top" title="" data-original-title="Twitter">
+                                    <i class="fa fa-twitter"></i>
+                                </a>
+                                <a href="#" class="social-icon icon-dribbble add-tooltip" data-placement="top" title="" data-original-title="Dribbble">
+                                    <i class="fa fa-dribbble"></i>
+                                </a>
+                                <a href="#" class="social-icon icon-google-plus add-tooltip" data-placement="top" title="" data-original-title="Google Plus">
+                                    <i class="fa fa-google-plus"></i>
+                                </a>
+                                <a href="#" class="social-icon icon-linkedin add-tooltip" data-placement="top" title="" data-original-title="Linkedin">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                                <a href="#" class="social-icon icon-rss add-tooltip" data-placement="top" title="" data-original-title="Rss Feed">
+                                    <i class="fa fa-rss"></i>
+                                </a>
+                            </div><!-- End .social-icons -->
+                        </li>
+                    </ul>
+                </div><!-- End .portfolio-details -->
+
+            </div><!-- End .col-md-5 -->
+
+        </div><!-- End .row -->
+    </div><!-- End .container -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 portfolio-related-container">
+                <h3 class="title-underblock custom mb30">Related Movies</h3>
+
+                <div class="portfolio-related-carousel owl-carousel popup-gallery owl-theme owl-loaded owl-responsive-768">
+                    <!-- End .portfolio-item -->
+                    <!-- End .portfolio-item -->
+                    <!-- End .portfolio-item -->
+                    <!-- End .portfolio-item -->
+                    <!-- End .portfolio-item -->
+                    <!-- End .portfolio-item -->
+                    <div class="owl-stage-outer">
+                        <div class="owl-stage" style="transform: translate3d(-500px, 0px, 0px); transition: 0s; width: 1500px;">
+                            <div class="owl-item" style="width: 220px; margin-right: 30px;">
+                                <div class="portfolio-item portfolio-image-zoom portfolio-meta-slideup">
+                                    <figure>
+                                        <a href="images/portfolio/grid/item1.jpg" class="zoom-item" title="Portfolio Item Description"><img src="images/portfolio/grid/item1.jpg" alt="portfolio item name" class="img-responsive"></a>
+                                    </figure>
+                                    <div class="portfolio-meta dark">
+                                        <h3 class="portfolio-title"><a href="single-portfolio.html">Cool Buggy</a></h3>
+                                        <div class="portfolio-tags"><a href="#">Design</a>, <a href="#">Love</a></div>
+                                        <a class="portfolio-favourite" href="#" title="Favourite">
+                                            <i class="fa fa-heart-o"></i>
+                                            <span>14</span>
+                                        </a>
+                                    </div><!-- End .portfolio-meta -->
+                                </div>
+                            </div><div class="owl-item" style="width: 220px; margin-right: 30px;">
+                                <div class="portfolio-item portfolio-image-zoom portfolio-meta-slideup">
+                                    <figure>
+                                        <a href="images/portfolio/grid/item2.jpg" class="zoom-item" title="Portfolio Item Description"><img src="images/portfolio/grid/item2.jpg" alt="portfolio item name" class="img-responsive"></a>
+                                    </figure>
+                                    <div class="portfolio-meta dark">
+                                        <h3 class="portfolio-title"><a href="single-portfolio.html">Cool Buggy</a></h3>
+                                        <div class="portfolio-tags"><a href="#">Life</a>, <a href="#">Nature</a></div>
+                                        <a class="portfolio-favourite" href="#" title="Favourite">
+                                            <i class="fa fa-heart-o"></i>
+                                            <span>4</span>
+                                        </a>
+                                    </div><!-- End .portfolio-meta -->
+                                </div>
+                            </div><div class="owl-item active" style="width: 220px; margin-right: 30px;">
+                                <div class="portfolio-item portfolio-image-zoom portfolio-meta-slideup">
+                                    <figure>
+                                        <a href="images/portfolio/grid/item3.jpg" class="zoom-item" title="Portfolio Item Description"><img src="images/portfolio/grid/item3.jpg" alt="portfolio item name" class="img-responsive"></a>
+                                    </figure>
+                                    <div class="portfolio-meta dark">
+                                        <h3 class="portfolio-title"><a href="single-portfolio.html">Cool Buggy</a></h3>
+                                        <div class="portfolio-tags"><a href="#">Design</a>, <a href="#">Fashion</a></div>
+                                        <a class="portfolio-favourite" href="#" title="Favourite">
+                                            <i class="fa fa-heart-o"></i>
+                                            <span>12</span>
+                                        </a>
+                                    </div><!-- End .portfolio-meta -->
+                                </div>
+                            </div><div class="owl-item active" style="width: 220px; margin-right: 30px;">
+                                <div class="portfolio-item portfolio-image-zoom portfolio-meta-slideup">
+                                    <figure>
+                                        <a href="images/portfolio/grid/item4.jpg" class="zoom-item" title="Portfolio Item Description"><img src="images/portfolio/grid/item4.jpg" alt="portfolio item name" class="img-responsive"></a>
+                                    </figure>
+                                    <div class="portfolio-meta dark">
+                                        <h3 class="portfolio-title"><a href="single-portfolio.html">Cool Buggy</a></h3>
+                                        <div class="portfolio-tags"><a href="#">Design</a>, <a href="#">Love</a></div>
+                                        <a class="portfolio-favourite" href="#" title="Favourite">
+                                            <i class="fa fa-heart-o"></i>
+                                            <span>8</span>
+                                        </a>
+                                    </div><!-- End .portfolio-meta -->
+                                </div>
+                            </div><div class="owl-item active" style="width: 220px; margin-right: 30px;">
+                                <div class="portfolio-item portfolio-image-zoom portfolio-meta-slideup">
+                                    <figure>
+                                        <a href="images/portfolio/grid/item5.jpg" class="zoom-item" title="Portfolio Item Description"><img src="images/portfolio/grid/item5.jpg" alt="portfolio item name" class="img-responsive"></a>
+                                    </figure>
+                                    <div class="portfolio-meta dark">
+                                        <h3 class="portfolio-title"><a href="single-portfolio.html">Cool Buggy</a></h3>
+                                        <div class="portfolio-tags"><a href="#">Design</a>, <a href="#">Love</a></div>
+                                        <a class="portfolio-favourite" href="#" title="Favourite">
+                                            <i class="fa fa-heart-o"></i>
+                                            <span>14</span>
+                                        </a>
+                                    </div><!-- End .portfolio-meta -->
+                                </div>
+                            </div><div class="owl-item" style="width: 220px; margin-right: 30px;">
+                                <div class="portfolio-item portfolio-image-zoom portfolio-meta-slideup">
+                                    <figure>
+                                        <a href="images/portfolio/grid/item6.jpg" class="zoom-item" title="Portfolio Item Description"><img src="images/portfolio/grid/item6.jpg" alt="portfolio item name" class="img-responsive"></a>
+                                    </figure>
+                                    <div class="portfolio-meta dark">
+                                        <h3 class="portfolio-title"><a href="single-portfolio.html">Cool Buggy</a></h3>
+                                        <div class="portfolio-tags"><a href="#">Design</a>, <a href="#">Love</a></div>
+                                        <a class="portfolio-favourite" href="#" title="Favourite">
+                                            <i class="fa fa-heart-o"></i>
+                                            <span>8</span>
+                                        </a>
+                                    </div><!-- End .portfolio-meta -->
+                                </div>
+                            </div>
+                        </div>
+                    </div><div class="owl-controls"><div class="owl-nav"><div class="owl-prev" style=""><i class="fa fa-angle-left"></i></div><div class="owl-next" style=""><i class="fa fa-angle-right"></i></div></div><div class="owl-dots" style="display: none;"></div></div>
+                </div><!-- end .portfolio-related-carousel -->
+            </div><!-- End .col-md-12 -->
+        </div><!-- End .row -->
+    </div><!-- End .container -->
+
 </div>
