--- a/MyMovies.Web/Views/Admin/Index.cshtml
+++ b/MyMovies.Web/Views/Admin/Index.cshtml
@@ -7,16 +7,16 @@
                 <div class="col-md-6">
                     <h1>Admin Page</h1>
                     <p class="page-header-desc">Create, edit or delete movie details</p>
-                </div><!-- End .col-md-6 -->
+                </div>
                 <div class="col-md-6">
                     <ol class="breadcrumb">
                         <li><a href="index.html">Admin</a></li>
                         <li class="active">Maintenance</li>
                     </ol>
-                </div><!-- End .col-md-6 -->
-            </div><!-- End .row -->
-        </div><!-- End .container -->
-    </div><!-- End .page-header -->
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container">
 
@@ -50,7 +50,6 @@
         </div>
 
         @Html.Partial("_MovieForm", Model)
-
     </div>
 
 </div>
