--- a/MyMovies.Web/Views/Shared/_Layout.cshtml
+++ b/MyMovies.Web/Views/Shared/_Layout.cshtml
@@ -6,10 +6,10 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    <script src="~/Scripts/angular.min.js"></script>
 </head>
 
-<body>
+<body ng-app="MovieApp">
     <div id="wrapper">
         @Html.Partial("_Header")
         @RenderBody()
