--- a/MyMovies.Web/Views/Admin/Index.cshtml
+++ b/MyMovies.Web/Views/Admin/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model MyMovies.Web.ViewModels.MovieViewModel
-
+@{
+    var search = ViewBag.Search ?? "";
+}
 <div id="content" role="main">
     <div class="page-header dark larger larger-desc">
         <div class="container">
@@ -40,12 +42,16 @@
 
         <div class="row">
             <div class="col-xs-8">
-                <div class="input-group">
-                    <span class="input-group-btn">
-                        <button class="btn btn-custom" type="button">Search</button>
-                    </span>
-                    <input type="text" class="form-control" placeholder="Enter ImdbId Here or Movie Name">
-                </div>
+                @using (Html.BeginForm("Search", "Admin", FormMethod.Get))
+                {
+                    <div class="input-group">
+
+                        <span class="input-group-btn">
+                            <input type="submit" class="btn btn-custom" value="Search" />
+                        </span>
+                        <input type="text" class="form-control" placeholder="Enter ImdbId Here or Movie Name" name="key" value="@search">
+                    </div>
+                }
             </div>
         </div>
 
@@ -53,3 +59,7 @@
     </div>
 
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
