--- a/MyMovies.Web/Views/Admin/_MovieForm.cshtml
+++ b/MyMovies.Web/Views/Admin/_MovieForm.cshtml
@@ -14,7 +14,7 @@
                     <label class="input-desc">Title</label>
                     @Html.ValidationMessageFor(model => model.Title)
                     @Html.TextBoxFor(model => model.Title, new { @class = "form-control no-radius", placeholder = "Title" })
-                    
+
                     <label class="input-desc">Genre</label>
                     @Html.TextBoxFor(model => model.Genre, new { @class = "form-control no-radius", placeholder = "Genre" })
 
@@ -36,16 +36,16 @@
                     @Html.TextBoxFor(model => model.ImdbId, new { @class = "form-control no-radius", placeholder = "Imdb Id" })
 
                     <label class="input-desc">Rating</label>
-                    @Html.TextBoxFor(model => model.Rating, new {@class = "form-control no-radius", placeholder = "Rating"})
+                    @Html.TextBoxFor(model => model.Rating, new { @class = "form-control no-radius", placeholder = "Rating" })
 
                     <label class="input-desc">Directors</label>
-                    @Html.TextBoxFor(model => model.Directors, new {@class = "form-control no-radius", placeholder = "Directors"})
+                    @Html.TextBoxFor(model => model.Directors, new { @class = "form-control no-radius", placeholder = "Directors" })
 
                     <label class="input-desc">Writers</label>
-                    @Html.TextBoxFor(model => model.Writers, new {@class = "form-control no-radius", placeholder = "Writers"})
+                    @Html.TextBoxFor(model => model.Writers, new { @class = "form-control no-radius", placeholder = "Writers" })
 
                     <label class="input-desc">Date Released</label>
-                    @Html.TextBoxFor(model => model.DateReleased, new {@class = "form-control no-radius", placeholder = "Date Released"})
+                    @Html.TextBoxFor(model => model.DateReleased, new { @class = "form-control no-radius", placeholder = "Date Released" })
                 </div>
 
                 <div class="col-sm-12">
@@ -99,10 +99,10 @@
                     <label class="input-desc">File Name</label>
                     @Html.ValidationMessageFor(model => model.FileName)
                     @Html.TextBoxFor(model => model.FileName, new { @class = "form-control no-radius", placeholder = "File Name", ng_model = "fileName" })
-                                        
+
                     <label class="input-desc">File Size</label>
                     @Html.ValidationMessageFor(model => model.FileSize)
-                    @Html.TextBoxFor(model => model.FileSize, new { @class = "form-control no-radius", placeholder = "File Size", ng_model = "fileSize" })                    
+                    @Html.TextBoxFor(model => model.FileSize, new { @class = "form-control no-radius", placeholder = "File Size", ng_model = "fileSize" })
                 </div>
 
                 <div class="col-sm-12">
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <input type="button" class="btn btn-primary btn-sm" ng-click="getFileDetails()" value="Select File"/>
+                    <input type="button" class="btn btn-primary btn-sm" ng-click="getFileDetails()" value="Select File" />
                 </div>
             </div>
         </div>
@@ -121,8 +121,11 @@
             @Html.HiddenFor(model => model.Poster)
             @Html.HiddenFor(model => model.MovieId)
             <div class="col-xs-12">
-                <input type="submit" class="btn btn-custom btn-lg" value="Submit"/>
-                <input type="submit" class="btn btn-custom btn-lg" value="View In IMDB" />
+                <input type="submit" class="btn btn-custom btn-lg" value="Submit" />
+                @if (!String.IsNullOrEmpty(Model.ImdbId))
+                {
+                    <a href="http://www.imdb.com/title/@Model.ImdbId" class="btn btn-warning btn-lg">View In IMDB</a>
+                }
             </div>
         </div>
     }
@@ -131,17 +134,17 @@
 <script>
     var app = angular.module('MovieApp', []);
     app.controller('AdminController', function ($scope) {
-        $scope.fileName = '';
-        $scope.fileSize = '';
+        $scope.fileName = '@(Model.FileName)';
+        $scope.fileSize = '@(Model.FileSize)';
         $scope.getFileDetails = function () {
             var input = $(document.createElement('input'));
             input.attr("type", "file");
 
             $(input).change(function () {
-                $scope.fileName = $(input)[0].files[0].name;               
+                $scope.fileName = $(input)[0].files[0].name;
                 var fileSize = $(input)[0].files[0].size;
                 var ctr = 0;
-                var byteSizes = [ "kb", "mb", "gb" ];
+                var byteSizes = ["kb", "mb", "gb"];
 
                 fileSize = parseFloat(fileSize) / 1024;
                 while (fileSize > 1000) {
@@ -152,7 +155,7 @@
                 $scope.fileSize = fileSize.toFixed(2) + byteSizes[ctr];
                 $scope.$apply();
             });
-            
+
             input.trigger('click');
             return false;
         }
