--- a/MyMovies.Web/Views/Account/Register.cshtml
+++ b/MyMovies.Web/Views/Account/Register.cshtml
@@ -1,64 +1,84 @@
 ﻿@model Payroll.Models.RegisterViewModel
 
-<div class="container">
-    <div class="row">
-        <div class="col-sm-12">
-            <h2 class="title-border custom mb40">Register an Account</h2>
+<div id="content" role="main">
+    <div class="page-header dark larger larger-desc">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>Login Page</h1>
+                    <p class="page-header-desc">Login to your account or create one.</p>
+                </div>
+                <div class="col-md-6">
+                    <ol class="breadcrumb">
+                        <li><a href="/">Home</a></li>
+                        <li class="active">Registration</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </div>
 
-            @using (Html.BeginForm("Register", "Account", FormMethod.Post))
-            {
-                <div class="row">
-                    <div class="col-sm-6 ">
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.FirstName, new { @class = "input-desc" })
-                            @Html.TextBoxFor(model => model.FirstName, new { @class = "form-control", placeholder = "Your Name" })
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <h2 class="title-border custom mb40">Register an Account</h2>
+                @Html.ValidationSummary()
+                @using (Html.BeginForm("Register", "Account", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
+                    <div class="row">
+                        <div class="col-sm-6 ">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.FirstName, new { @class = "input-desc" })
+                                @Html.TextBoxFor(model => model.FirstName, new { @class = "form-control", placeholder = "Your Name" })
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-sm-6 ">
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.LastName, new { @class = "input-desc" })
-                            @Html.TextBoxFor(model => model.LastName, new { @class = "form-control", placeholder = "Your Last Name" })
+                    <div class="row">
+                        <div class="col-sm-6 ">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.LastName, new { @class = "input-desc" })
+                                @Html.TextBoxFor(model => model.LastName, new { @class = "form-control", placeholder = "Your Last Name" })
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-sm-6 ">
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.UserName, new { @class = "input-desc" })
-                            @Html.TextBoxFor(model => model.UserName, new { @class = "form-control", placeholder = "Username" })
+                    <div class="row">
+                        <div class="col-sm-6 ">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.UserName, new { @class = "input-desc" })
+                                @Html.TextBoxFor(model => model.UserName, new { @class = "form-control", placeholder = "Username" })
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-sm-6 ">
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Password, new { @class = "input-desc" })
-                            @Html.PasswordFor(model => model.Password, new { @class = "form-control", placeholder = "Your Password" })
+                    <div class="row">
+                        <div class="col-sm-6 ">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Password, new { @class = "input-desc" })
+                                @Html.PasswordFor(model => model.Password, new { @class = "form-control", placeholder = "Your Password" })
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-sm-6 ">
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.ConfirmPassword, new { @class = "input-desc" })
-                            @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password" })
+                    <div class="row">
+                        <div class="col-sm-6 ">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.ConfirmPassword, new { @class = "input-desc" })
+                                @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password" })
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="form-group mb5">
-                    <input type="submit" class="btn btn-custom" value="Register Now">
-                </div>
-            }
+                    <div class="form-group mb5">
+                        <input type="submit" class="btn btn-custom" value="Register Now">
+                    </div>
+                }
 
+
+            </div>
 
         </div>
-
     </div>
 </div>
