--- a/MyMovies.Web/Content/custom.css
+++ b/MyMovies.Web/Content/custom.css
@@ -55,9 +55,6 @@
     .t4 { margin-top: 4em; }
 }
 
-.row-eq-height {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display:  flex;
+.movie-list {
+    min-height: 330px;
 }
