--- a/MyMovies.Web/Views/Movie/Index.cshtml
+++ b/MyMovies.Web/Views/Movie/Index.cshtml
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h3>Category: Horror</h3>
+                    <h3>@Model.ListTitle</h3>
                 </div>
             </div>
         </div>
