--- a/MyMovies.Web/Views/Shared/_Menu.cshtml
+++ b/MyMovies.Web/Views/Shared/_Menu.cshtml
@@ -8,7 +8,7 @@
                 <ul>
                     @for (int a = 0; a < 12 && a < Model.Length; a++)
                     {
-                        <li><a href="aboutus.html">@Model[a]</a></li>
+                        <li><a href="/?Category=@Model[a]">@Model[a]</a></li>
                     }
                 </ul>
             </div>
@@ -18,7 +18,7 @@
                     {
                         for (int a = 12; a < 24 && a < Model.Length; a++)
                         {
-                            <li><a href="aboutus.html">@Model[a]</a></li>
+                            <li><a href="/?Category=@Model[a]">@Model[a]</a></li>
                         }
                     }
                 </ul>
@@ -29,7 +29,7 @@
                     {
                         for (int a = 24; a < 36 && a < Model.Length; a++)
                         {
-                            <li><a href="aboutus.html">@Model[a]</a></li>
+                            <li><a href="/?Category=@Model[a]">@Model[a]</a></li>
                         }
                     }
                 </ul>
@@ -40,7 +40,7 @@
                     {
                         for (int a = 36; a < 48 && a < Model.Length; a++)
                         {
-                            <li><a href="aboutus.html">@Model[a]</a></li>
+                            <li><a href="/?Category=@Model[a]">@Model[a]</a></li>
                         }
                     }
                 </ul>
