--- a/MyMovies.Web/Views/Movie/Index.cshtml
+++ b/MyMovies.Web/Views/Movie/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@model MyMovies.Web.ViewModels.MoviePaginationViewModel
 <div id="content" role="main">
-    <div class="page-header dark">
+    @*<div class="page-header dark">*@
+    <div class="page-header" data-bgattach="/images/test.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h3>@Model.ListTitle</h3>
+                    <h2>@Model.ListTitle</h2>
                 </div>
             </div>
         </div>
