--- a/MyMovies.Web/Views/Movie/_Movie.cshtml
+++ b/MyMovies.Web/Views/Movie/_Movie.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MyMovies.Web.ViewModels.MovieViewModel
 
-<div class="col-sm-6 movie-list">
+<div class="col-sm-6">
     <div class="col-sm-5">
         <h3>@Model.Title (@Model.Year)</h3>
         <div class="portfolio-item portfolio-meta-slideup push">
