--- a/MyMovies.Web/Views/Admin/_MovieForm.cshtml
+++ b/MyMovies.Web/Views/Admin/_MovieForm.cshtml
@@ -3,11 +3,30 @@
 <div ng-controller="AdminController">
     @using (@Html.BeginForm("Index", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
+        var updateImage = Model.UpdateImage ? "checked=\"checked\"" : "";
+
         <div class="row">
 
             <div class="col-md-4 col-md-push-8">
-                <img src="@Model.Poster" class="img-responsive" id="MoviePoster"/>
-                <input type="file" value="Upload" accept="image/*" custom-on-change="fileChange" name="MoviePoster"/>
+                <img src="@Model.Poster" class="img-responsive" id="MoviePoster" />
+                <input type="file" value="Upload" accept="image/*" custom-on-change="fileChange" name="MoviePoster" />
+                <label>
+                    @Html.CheckBoxFor(model => model.UpdateImage)
+                    Update Image
+                </label>
+
+                @*<div class="checkbox">
+                        <label class="custom-checkbox-wrapper">
+                            <span class="custom-checkbox-container">
+                                <input data-val="true" data-val-required="The UpdateImage field is required." id="UpdateImage" name="UpdateImage" type="checkbox" value="@Model.UpdateImage" checked="@Model.UpdateImage" >
+                                <input type="checkbox" name="UpdateImage" checked="@Model.UpdateImage">
+                                <span class="custom-checkbox-icon"></span>
+                            </span>
+
+                            <input name="UpdateImage" type="hidden" value="@Model.UpdateImage">
+                            <span>Update Image</span>
+                        </label>
+                    </div>*@
             </div>
 
             <div class="col-md-8 col-md-pull-4">
@@ -121,9 +140,9 @@
         <div class="row">
             @Html.HiddenFor(model => model.RelatedMovie)
             @Html.HiddenFor(model => model.Poster)
-            @Html.HiddenFor(model => model.MovieId, new {ng_model = "movieId"})
+            @Html.HiddenFor(model => model.MovieId, new { ng_model = "movieId" })
             <div class="col-xs-12">
-                <input type="submit" class="btn btn-custom btn-lg" value="Save"/>
+                <input type="submit" class="btn btn-custom btn-lg" value="Save" />
                 <a href="/Admin/MovieUpdate?id=@Model.MovieId" class="btn btn-primary btn-lg">Get Updates</a>
                 @if (!String.IsNullOrEmpty(Model.ImdbId))
                 {
